Add Pandas 學習資料

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -3,5 +3,5 @@
     "python.autoComplete.extraPaths": [
         "E:/GitHub/Futures/env/Lib/site-packages"
     ],
-    "python.autoComplete.addBrackets": false
+    "python.autoComplete.addBrackets": true
 }
